# trinity

./: .coveragerc  .gitignore  .gitleaks.toml  CANARY-150-DOCS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SKILL.md  install-manifest.json  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt
.agents/: trinity.codex.json
.github/: CODEOWNERS  pull_request_template.md
dev/: pr_update.py
docs/: adding-a-provider.md  architecture.md  codex-compatibility.md  command-reference.md  troubleshooting.md  usage-guide.md
providers/: claude-code.delta.md  claude-code.md  codex.delta.md  codex.md  deepseek.delta.md  deepseek.md  gemini.delta.md  gemini.md  glm.delta.md  glm.md  minimax.delta.md  minimax.md  openrouter.delta.md  openrouter.md  registry.json
rules/: TRN-0000-REF-Document-Index.md  TRN-1000-SOP-Workflow-Routing-PRJ.md  TRN-1001-SOP-Test.md  TRN-1002-SOP-Lint.md  TRN-1003-SOP-Version-Bump.md  TRN-1004-SOP-Release.md  TRN-1005-SOP-Install.md  TRN-1006-SOP-Provider-Model-IDs.md  TRN-1007-SOP-PR-Readiness.md  TRN-1008-SOP-Multi-Agent-Review-Loop.md  TRN-1009-SOP-Issue-Filing.md  TRN-1200-SOP-Session-Retrospective.md  TRN-1209-REF-Multi-Agent-Loop-Config.md  TRN-1800-REF-Evolution-Philosophy.md  TRN-1801-SOP-Evolve-Trinity.md  TRN-2001-CHG-Release-Infrastructure.md  TRN-2002-PRP-Remote-Install-Script.md  TRN-2003-CHG-Remote-Install-Script.md  TRN-2004-CHG-Provider-Files-Refactor.md  TRN-2005-CHG-Codex-GPT-5.5-Pin.md  TRN-2006-CHG-Release-On-Tag-Workflow.md  TRN-2007-CHG-One-Click-Release.md  TRN-2008-PRP-Remove-Zsh-Dependency.md  (+45 more)
(+110 files in other folders)
