[project]
name = "trinity-dev"
version = "0.0.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "coverage[toml]",
    "pip-audit>=2.10.1",
    "pytest",
    "pytest-asyncio",
    "pytest-bdd>=7,<8",
    "pytest-cov",
    "ruff",
]

[tool.uv]
package = false
